RESOLVED FIXED296222
[shape-outside] Fix /css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-008/014
https://bugs.webkit.org/show_bug.cgi?id=296222
Summary [shape-outside] Fix /css/css-shapes/shape-outside/shape-image/gradients/shape...
alan
Reported 2025-07-18 19:04:39 PDT
ssia
Attachments
Patch (5.66 KB, patch)
2025-07-18 19:16 PDT, alan
no flags
Patch (5.62 KB, patch)
2025-07-19 08:18 PDT, alan
no flags
Patch (5.62 KB, patch)
2025-07-19 12:44 PDT, alan
no flags
[fast-cq]Patch (5.63 KB, patch)
2025-07-19 13:02 PDT, alan
no flags
alan
Comment 1 2025-07-18 19:16:00 PDT
alan
Comment 2 2025-07-19 08:18:23 PDT
alan
Comment 3 2025-07-19 12:44:51 PDT
alan
Comment 4 2025-07-19 13:02:03 PDT
Created attachment 476116 [details] [fast-cq]Patch
EWS
Comment 5 2025-07-19 15:28:39 PDT
Committed 297652@main (2697d66569a6): <https://commits.webkit.org/297652@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 476116 [details].
Radar WebKit Bug Importer
Comment 6 2025-07-19 15:29:13 PDT
Tim Nguyen (:ntim)
Comment 7 2025-08-22 22:29:41 PDT
Submitted web-platform-tests pull request: https://github.com/web-platform-tests/wpt/pull/54482
Note You need to log in before you can comment on or make changes to this bug.