[shape-outside] Fix /css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-008/014 https://bugs.webkit.org/show_bug.cgi?id=296222

Reviewed by Simon Fraser.

Add line direction flipping when needed (regular RTL content and LTR with sideways-lr)
See https://www.w3.org/TR/css-writing-modes-4/#line-directions

* LayoutTests/TestExpectations:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-008.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-shapes/shape-outside/shape-image/gradients/shape-outside-linear-gradient-014.html:
* Source/WebCore/rendering/shapes/RasterLayoutShape.cpp:
(WebCore::RasterLayoutShape::getExcludedInterval const):

Canonical link: https://commits.webkit.org/297652@main